@@ -97,6 +97,11 @@ let rec eval_path = function
   | Pdot(p, _, pos) -> Obj.field (eval_path p) pos
   | Papply _ -> fatal_error "Loadprinter.eval_path"
 
+(* PR#7258: get rid of module aliases before evaluating paths *)
+
+let eval_path path =
+  eval_path (Env.normalize_path (Some Location.none) Env.empty path)
+
 (* Install, remove a printer (as in toplevel/topdirs) *)
 
 (* since 4.00, "topdirs.cmi" is not in the same directory as the standard
